# ec2-playground

./: Cargo.toml  README.md
src/: ec2.rs  lib.rs  main.rs
src/commands/: ip.rs
