[package]
name = "ec2-bridge"
version = "0.1.0"
authors = ["ravinderj <ravindj@thoughtworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.42"
rusoto_ec2 = "0.42"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"